--- a/projects/yellow/index.html
+++ b/projects/yellow/index.html
@@ -4,7 +4,7 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" type="image/png" href="./img/favicon.png"/>
+		<link rel="icon" type="image/png" href="../../img/favicon.png"/>
 		
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -68,22 +68,22 @@
 						Projects
 					  </a>
 					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<li><a class="dropdown-item disabled" href="./projects/black/">Film <span class="badge bg-dark">Black</span></a></li>
+						<li><a class="dropdown-item" href="../projects/black/">Film <span class="badge bg-dark">Black</span></a></li>
 						<li><a class="dropdown-item" href="#">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
-						<li><a class="dropdown-item disabled" href="./projects/green/">Programming <span class="badge bg-success">Green</span></a></li>
-						<li><a class="dropdown-item disabled" href="./projects/blue/">AI <span class="badge bg-primary">Blue</span></a></li>
+						<li><a class="dropdown-item disabled" href="../projects/green/">Programming <span class="badge bg-success">Green</span></a></li>
+						<li><a class="dropdown-item disabled" href="../projects/blue/">AI <span class="badge bg-primary">Blue</span></a></li>
 						<li><hr class="dropdown-divider"></li>
-						<li><a class="dropdown-item" href="./projects/">All projects</a></li>
+						<li><a class="dropdown-item" href="../projects/">All projects</a></li>
 					  </ul>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="./gallery">Gallery</a>
+					<a class="nav-link" href="../../gallery">Gallery</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="./about">About us</a>
+					<a class="nav-link" href="../../about">About us</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="./contact">Contact us</a>
+					<a class="nav-link" href="../../contact">Contact us</a>
 				  </li>
 				</ul>
 			  </div>
@@ -267,7 +267,7 @@
 		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
 			<div class="col-md-4 d-flex align-items-center">
 			  <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-				<object class="bi" width="30" height="30" data="./img/icon.svg" type="image/svg+xml"></object>
+				<object class="bi" width="30" height="30" data="../../img/icon.svg" type="image/svg+xml"></object>
 			  </a>
 			  <span class="text-muted">&copy; 2021 Project Georgia</span>
 			</div>
