--- a/projects/black/index.html
+++ b/projects/black/index.html
@@ -9,7 +9,7 @@
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-		<title>Project Georgia Yellow</title>
+		<title>Project Georgia Black</title>
 		
 		<style>
 		
@@ -34,7 +34,7 @@
 		</svg>
 	
 		<header>
-		  <nav class="navbar navbar-expand-md navbar-light fixed-top bg-warning">
+		  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 			<div class="container-fluid">
 			  <a class="navbar-brand" href="/"><img src="../../img/icon.png" width="35" height="35" class="d-inline-block align-text-top"></a>
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,8 +50,8 @@
 						Projects
 					  </a>
 					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<li><a class="dropdown-item" href="../black/">Film <span class="badge bg-dark">Black</span></a></li>
-						<li><a class="dropdown-item" href="#">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
+						<li><a class="dropdown-item" href="#">Film <span class="badge bg-dark">Black</span></a></li>
+						<li><a class="dropdown-item" href="../yellow/">Animation & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
 						<li><a class="dropdown-item" href="../green/">Programming <span class="badge bg-success">Green</span></a></li>
 						<li><a class="dropdown-item" href="../blue/">AI <span class="badge bg-primary">Blue</span></a></li>
 						<li><hr class="dropdown-divider"></li>
@@ -77,8 +77,8 @@
 			<section class="py-5 text-center container">
 				<div class="row py-lg-5">
 				  <div class="col-lg-6 col-md-8 mx-auto">
-					<h1 class="fw-light">Animation & Render</h1>
-					<p class="lead text-muted">Rendered in blender.</p>
+					<h1 class="fw-light">Film</h1>
+					<p class="lead text-muted">:)</p>
 					<p>
 					  <a href="../" class="btn btn-primary my-2">All projects</a>
 					  <a href="../../gallery" class="btn btn-secondary my-2">View in gallery</a>
