--- a/projects/blue/index.html
+++ b/projects/blue/index.html
@@ -34,7 +34,7 @@
 		</svg>
 	
 		<header>
-		  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-info">
+		  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
 			<div class="container-fluid">
 			  <a class="navbar-brand" href="/"><img src="../../img/icon.png" width="35" height="35" class="d-inline-block align-text-top"></a>
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
