--- a/projects/green/index.html
+++ b/projects/green/index.html
@@ -77,7 +77,7 @@
 			<section class="py-5 text-center container">
 				<div class="row py-lg-5">
 				  <div class="col-lg-6 col-md-8 mx-auto">
-					<h1 class="fw-light">AI</h1>
+					<h1 class="fw-light">Programming</h1>
 					<p class="lead text-muted">:)</p>
 					<p>
 					  <a href="../" class="btn btn-primary my-2">All projects</a>
