--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img src="./projects/yellow/media/chair1.png" class="d-block w-100" style="object-fit: cover;">
+					<img src="./projects/yellow/preview/yellow2.jpg" class="d-block w-100" style="object-fit: cover;">
 					
 					<div class="container">
 					  <div class="carousel-caption">
@@ -188,7 +188,7 @@
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img src="./projects/yellow/media/donut1.png" class="d-block w-100" style="object-fit: cover;">
+					<img src="./projects/yellow/preview/yellow1.jpg" class="d-block w-100" style="object-fit: cover;">
 					
 					<div class="container">
 					  <div class="carousel-caption text-end">
