--- a/gallery.html
+++ b/gallery.html
@@ -59,13 +59,13 @@
 					  </ul>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="#">Gallery</a>
+					<a class="nav-link active" href="#">Gallery</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-link" href="./about">About us</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link active" href="./contact">Contact us</a>
+					<a class="nav-link" href="./contact">Contact us</a>
 				  </li>
 				</ul>
 			  </div>
