--- a/projects/index.html
+++ b/projects/index.html
@@ -65,7 +65,7 @@
 					<a class="nav-link" href="../about">About us</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link active" href="../contact">Contact us</a>
+					<a class="nav-link" href="../contact">Contact us</a>
 				  </li>
 				</ul>
 			  </div>
