--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 		
 		<style>
 		
+			@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap');
+			* {
+				/*font-family: sans-serif;*/
+				font-family: 'Dosis', sans-serif;
+			}
+		
 			/* GLOBAL STYLES
 			-------------------------------------------------- */
 			/* Padding below the footer and lighter body text */
