--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -80,10 +80,16 @@
 		</header>
 	
 		<main>
+		
+		<script>
+		
+		document.write(window.location.hash);
+		
+		</script>
 			
 				  
 						
-						<script>
+						<!--<script>
 							var File = new XMLHttpRequest();
 							var content;
 							File.open("GET", "./database.txt", false);
@@ -105,7 +111,7 @@
 							//	str = "<div class='col'><div class='card shadow-sm'><img class='bd-placeholder-img card-img-top w-100' width='100%' height='225' src='./preview/" + database[i].ID + ".jpg' focusable='false' style='object-fit: cover;'/><div class='card-body'><p class='card-text'>" + database[i].Title + "</p><div class='d-flex justify-content-between align-items-center'><a type='button' class='btn btn-sm btn-outline-secondary' href='./view#" + database[i].ID + "'>View</a><small class='text-muted'>" + database[i].Date + "</small></div></div></div></div>" + str;
 							//}
 							//document.write(str);
-						</script>
+						</script>-->
 
 		</main>
 		
