--- a/priv/view.html
+++ b/priv/view.html
@@ -1,5 +1,7 @@
 <!-- Import the component -->
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-
+<script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
 <!-- Use it like any other HTML element -->
-<model-viewer src="minecraft_idea1.glb" ar ar-modes="webxr scene-viewer quick-look" seamless-poster shadow-intensity="1" camera-controls></model-viewer>
+<model-viewer id="mv-demo" shadow-intensity="1" src="minecraft_idea1.glb"
+alt="mc" auto-rotate camera-controls
+poster=""></model-viewer>
