--- a/priv/view.html
+++ b/priv/view.html
@@ -1,13 +1,7 @@
 <!-- Import the component -->
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
-<style>
-model-viewer {
-  width: 100%px;
-  height: 100%px;
-}
-</style>
 <!-- Use it like any other HTML element -->
-<model-viewer id="mv-demo" shadow-intensity="1" src="minecraft_idea1.glb"
+<model-viewer style="width: 100%; height: 100%; top: 0px;" id="mv-demo" shadow-intensity="1" src="minecraft_idea1.glb"
 alt="mc" auto-rotate camera-controls
 poster=""></model-viewer>
