--- a/priv/view.html
+++ b/priv/view.html
@@ -1,7 +1,17 @@
-<!-- Import the component -->
-<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-<script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
-<!-- Use it like any other HTML element -->
-<model-viewer style="width: 100%; height: 100%; top: 0px;" id="mv-demo" shadow-intensity="1" src="minecraft_idea1.glb"
-alt="mc" auto-rotate camera-controls
-poster=""></model-viewer>
+<!doctype html>
+<html lang="en">
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="icon" type="image/png" href="./img/favicon.png"/>
+		<!-- Import the component -->
+		<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+		<script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
+	</head>
+	<body>
+		<!-- Use it like any other HTML element -->
+		<model-viewer style="width: 100%; height: 100%; top: 0px;" id="mv-demo" shadow-intensity="1" src="minecraft_idea1.glb"
+		alt="mc" auto-rotate camera-controls></model-viewer>
+	</body>
+</html>
