--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -87,7 +87,7 @@
 		
 		
 		<main>		
-			<section class="py-5 text-center container" id="Header">
+			<section class="container" id="Header">
 				<div class="row py-lg-5">
 				  <div class="col-lg-6 col-md-8 mx-auto">
 					<h1 class="fw-light" id="Title"></h1>
