--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -28,6 +28,10 @@
 			  padding-bottom: 3rem;
 			  color: #5a5a5a;
 			}
+			
+			#Header {
+			  padding-top: 3rem;
+			}
 		
 		</style>
 	</head>
