--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -92,8 +92,8 @@
 		
 		<main>		
 			<div class="container" id="Header">
-				<h1 class="fw-light" id="Title"></h1>
-				<p class="lead text-muted" id="Date"></p>
+				<h1 class="fw-bold" id="Title"></h1>
+				<p class="text-muted" id="Date"></p>
 				<hr>
 					
 					
@@ -186,7 +186,7 @@
 				for (let i in database) {
 					if (database[i].ID == id) {
 						document.getElementById("Title").innerHTML = database[i].Title;
-						document.getElementById("Date").innerHTML = database[i].Date;
+						document.getElementById("Date").innerHTML = "Last-Modified: " + database[i].Date;
 						if (database[i].Type == "image"){
 							document.getElementById("MediaImage").src = './media/' + database[i].Media;
 							document.getElementById("MediaVideo").style.display = "none";
