--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -138,7 +138,7 @@
 								</tr>
 							</thead>
 							<tbody>
-								<div id="Download">
+								<div id="Download"></div>
 							</tbody>
 						</table>
 					</div>
