--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -187,9 +187,9 @@
 						first = true;
 						for (let i3 in database[i].Download_version) {
 							if (first) {
-								document.getElementById("Download").innerHTML += '<tr><th scope="row"' + database[i].Download_version[i3] + '</th><td>' + database[i].Download_date[i3] + '</td><td><a href="' + database[i].Download_link[i3] + '"></a></td></tr>';
+								document.getElementById("Download").innerHTML += '<tr><th scope="row">' + database[i].Download_version[i3] + '</th><td>' + database[i].Download_date[i3] + '</td><td><a href="' + database[i].Download_link[i3] + '"></a></td></tr>';
 							} else {
-								document.getElementById("Download").innerHTML += '<tr><th scope="row"' + database[i].Download_version[i3] + '<span class="badge rounded-pill bg-success">Latest</span></th><td><a href="' + database[i].Download_date[i3] + '"></a></td><td>' + database[i].Download_link[i3] + '</td></tr>';
+								document.getElementById("Download").innerHTML += '<tr><th scope="row">' + database[i].Download_version[i3] + '<span class="badge rounded-pill bg-success">Latest</span></th><td><a href="' + database[i].Download_date[i3] + '"></a></td><td>' + database[i].Download_link[i3] + '</td></tr>';
 							}
 						}
 					}
