--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -199,7 +199,7 @@
 						}
 						
 						for (let i4 in database[i].Changelog_title) {
-							document.getElementById("Changelog").innerHTML += '<h2>' + database[i].Changelog_title[i3] + '</h2><p>' + database[i].Changelog_detail[i3] + '</p><br>';
+							document.getElementById("Changelog").innerHTML += '<h2>' + database[i].Changelog_title[i4] + '</h2><hr><p>' + database[i].Changelog_detail[i4] + '</p><br>';
 						}
 				}
 			
