--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -210,7 +210,7 @@
 				}
 				
 				$(function(){
-					$("#Detail").load(name); 
+					$("#Detail").load(encodeURIComponent(name)); 
 				});
 			</script>
 		</main>
