--- a/projects/blue/Tanghin in Minecraft/detail.html
+++ b/projects/blue/Tanghin in Minecraft/detail.html
@@ -1,5 +1,5 @@
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
-<model-viewer style="width: 100%; height: 100%; position: absolute; top: 0px; left: 0px; z-index: 1; display: none;" id="3D_viewer" shadow-intensity="1" src="./model.glb" alt="3D" auto-rotate camera-controls poster="">
+<model-viewer style="width: 100%; height: 100%; position: absolute; top: 0px; left: 0px; z-index: 1; display: none;" id="3D_viewer" shadow-intensity="1" src="./Tanghin in Minecraft/model.glb" alt="3D" auto-rotate camera-controls poster="">
 </model-viewer>
 <button type="button" class="btn btn-outline-primary" onclick="document.getElementById('3D_viewer').style.display = 'block';">View in 3D</button>
