--- a/projects/blue/Tanghin in Minecraft/detail.html
+++ b/projects/blue/Tanghin in Minecraft/detail.html
@@ -1,7 +1,5 @@
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
-<div style="position: relative; width: 100%; height: 100%; display: none; z-index: 1;" id="3D_viewer">
-	<model-viewer style="width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: 2; background-color: #FFFFFF;" shadow-intensity="1" src="./Tanghin in Minecraft/model.glb" alt="3D" auto-rotate camera-controls poster="">
-	</model-viewer>
-</div>
+<model-viewer style="width: 100vw; height: 100vh; position: fixed; top: 0px; left: 0px; z-index: 1; overflow: auto; background-color: #FFFFFF; display: none;" id="3D_viewer" shadow-intensity="1" src="./Tanghin in Minecraft/model.glb" alt="3D" auto-rotate camera-controls poster="">
+</model-viewer>
 <button type="button" class="btn btn-outline-primary" onclick="document.getElementById('3D_viewer').style.display = 'block';">View in 3D</button>
