--- a/projects/blue/Tanghin in Minecraft/detail.html
+++ b/projects/blue/Tanghin in Minecraft/detail.html
@@ -1,6 +1,6 @@
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
 <model-viewer style="width: 100vw; height: 100vh; position: fixed; top: 0px; left: 0px; z-index: 3; overflow: auto; background-color: #FFFFFF; display: none;" id="3D_viewer" shadow-intensity="1" src="./Tanghin in Minecraft/model.glb" alt="3D" auto-rotate camera-controls poster="">
-	<span style="position: fixed; top: 3rem; right: 1rem; z-index: 4;" onclick="document.getElementById('3D_viewer').style.display = 'none';">&#10060;</span>
+	<button type="button" class="btn-close" style="position: fixed; top: 5rem; right: 3rem; z-index: 4;" onclick="document.getElementById('3D_viewer').style.display = 'none';"></button>
 </model-viewer>
 <button type="button" class="btn btn-outline-primary" onclick="document.getElementById('3D_viewer').style.display = 'block';">View in 3D</button>
